--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 
+	<div class="container">
+		
+	
 	<img id="me" src="assets/images/me.jpeg">
 
 	<h1>brigitte bautista</h1>
@@ -20,6 +23,7 @@
 	<p class="bio">
 		Brigite Bautista is a student learning to become a Full Stack Web Developer in Zuitt. She expects to grasp different programming languages. Also, she would like to have an interactive learning with other students and instructors. 
 	</p>
+	</div>
 
 </body>
 </html>
